--- a/src/main/resources/templates/RequestList.html
+++ b/src/main/resources/templates/RequestList.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
+<html lang="ru" xmlns:th="http://thymeleaf.org"
+      xmlns:sec="http://thymeleaf.org/extras/spring-security">
 <head>
-    <meta charset="UTF-8">
-    <title>Роли</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-file=no">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <title>[[${pageTitle}]]</title>
 </head>
 <body>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
     <a th:href="@{/Index}" class="control control_home">
 
         <img src="Logo.png" alt="Home" width="100" height="40">
     </a>
-
 
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 
@@ -34,36 +37,46 @@
         </li>
 
     </ul>
-
-    <div>
-        <form sec:authorize="isAuthenticated()" class="form-inline" th:action="@{/logout}" method="post">
-            <button type="submit" class="btn btn-outline-primary mr-2" >Выйти</button>
-        </form>
-    </div>
 </nav>
+
+<!-- <div th:unless="${user.id == null}"></div> -->
+
 <div sec:authorize="hasAuthority('Admin')" class="container text-center">
-    <div>
-        <h2>Роли</h2>
+    <div class="container mt-5">
+        <h2>Установленное ПО</h2>
         <table class="table">
             <thead>
             <tr>
                 <th>id</th>
-                <th>Название</th>
+                <th>Номер кабинета</th>
+                <th>Инв. номер компьютера</th>
+                <th>Название программы</th>
+                <th>Статус заявки</th>
+                <th>Дата открытия заявки</th>
+                <th>Описание проблемы</th>
+                <th>Дата закрытия заявки</th>
+                <th></th>
+                <th></th>
                 <th></th>
             </tr>
             </thead>
             <tbody>
-            <tr th:each="role: ${roles}">
-                <td th:text="${role.id}"></td>
-                <td th:text="${role.name}"></td>
-                <td><a th:href="@{role-delete/{id}(id=${role.id})}" class="btn btn-outline-primary ml-2 mr-2" role="button">Удалить</a></tr>
+            <tr th:each="requests: ${requestList}">
+                <td th:text="${requests.id}"></td>
+                <td th:text="${requests.room.getRoomNumber()}"></td>
+                <td th:text="${requests.ID_Computer}"></td>
+                <td th:text="${requests.software.getName()}"></td>
+                <td th:text="${requests.request_status}"></td>
+                <td th:text="${requests.application_date}"></td>
+                <td th:text="${requests.description_of_the_problem}"></td>
+                <td th:text="${requests.application_closing_date}"></td>
             </tr>
             </tbody>
         </table>
     </div>
-<p><a href="/role-create">Создать новую роль</a></p>
+    <div class="text-center"><a href="/workplaces-create" class="btn btn-outline-primary ml-2 mr-2" role="button">Создать новый кабинет</a></div>
+
 </div>
-
-
+</div>
 </body>
 </html>
