--- a/src/main/resources/templates/role-create.html
+++ b/src/main/resources/templates/role-create.html
@@ -2,14 +2,14 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Роли</title>
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <title>Добавление роли</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-    <a th:href="@{/Index}" class="control control_home">
+    <a href="@{/Index}" class="control control_home">
 
         <img src="Logo.png" alt="Home" width="100" height="40">
     </a>
@@ -40,30 +40,22 @@
             <button type="submit" class="btn btn-outline-primary mr-2" >Выйти</button>
         </form>
     </div>
+
+
 </nav>
+
+
+</nav>
+
 <div sec:authorize="hasAuthority('Admin')" class="container text-center">
-    <div>
-        <h2>Роли</h2>
-        <table class="table">
-            <thead>
-            <tr>
-                <th>id</th>
-                <th>Название</th>
-                <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="role: ${roles}">
-                <td th:text="${role.id}"></td>
-                <td th:text="${role.name}"></td>
-                <td><a th:href="@{role-delete/{id}(id=${role.id})}" class="btn btn-outline-primary ml-2 mr-2" role="button">Удалить</a></tr>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-<p><a href="/role-create">Создать новую роль</a></p>
+    <form action="#" th:action="@{/role-create}" th:object="${role}" method="post">
+
+        <label for="name">RoleName</label>
+        <input type="text" th:field="*{name}" id="name" placeholder="Name">
+
+        <input type="submit" value="Create Role">
+
+    </form>
 </div>
-
-
 </body>
 </html>
