--- a/src/main/resources/templates/room-details.html
+++ b/src/main/resources/templates/room-details.html
@@ -67,7 +67,7 @@
             </tbody>
         </table>
     </div>
-    <div class="text-center"><a href="/workplaces-create" class="btn btn-outline-primary ml-2 mr-2" role="button">Создать новый кабинет</a></div>
+    <div class="text-center"><a th:href="@{/room-details/workplaces-create/{id}(id=${roomNumber})}" class="btn btn-outline-primary ml-2 mr-2" role="button">Добавить рабочее место</a></div>
 
 </div>
 </div>
