--- a/src/main/resources/templates/computer-details.html
+++ b/src/main/resources/templates/computer-details.html
@@ -47,15 +47,13 @@
         <table class="table">
             <thead>
             <tr>
-                <th>id</th>
-                <th>Название программы</th>
                 <th>Инв. номер компьютера</th>
+                <th>Название программы</th>
                 <th>Дата начала действия лицензии</th>
                 <th>Дата конца действия лицензии</th>
                 <th>Дата установки</th>
                 <th>Тип лицензии</th>
                 <th>Статус</th>
-                <th>Номер кабинета</th>
                 <th></th>
                 <th></th>
                 <th></th>
@@ -63,23 +61,21 @@
             </thead>
             <tbody>
             <tr th:each="installedsoftwares: ${installedsoftwares}">
-                <td th:text="${installedsoftwares.id}"></td>
-                <td th:text="${installedsoftwares.software.getName()}"></td>
                 <td th:text="${installedsoftwares.computer.getINV()}"></td>
+                <td th:text="${installedsoftwares.software.getName()}"></td>
                 <td th:text="${installedsoftwares.LicenseStart}"></td>
                 <td th:text="${installedsoftwares.LicenseEnd}"></td>
                 <td th:text="${installedsoftwares.InstallationDate}"></td>
                 <td th:text="${installedsoftwares.TypeLicense_ID}"></td>
                 <td th:text="${installedsoftwares.WorkStatus}"></td>
-                <td th:text="${installedsoftwares.ID_room}"></td>
-                <td><a th:href="@{installedsoftwares-details/{id}(id=${installedsoftwares.id})}" class="btn btn-outline-primary ml-1 mr-1" role="button">Подробнее</a></td>
+                <td><a th:href="@{saveRequest/{id}(id=${installedsoftwares.id})}" class="btn btn-outline-primary ml-1 mr-1" role="button">Неисправность</a></td>
                 <td><a th:href="@{installedsoftwares-update/{id}(id=${installedsoftwares.id})}" class="btn btn-outline-primary ml-1 mr-1" role="button">Редактировать</a></td>
                 <td><a th:href="@{installedsoftwares-delete/{id}(id=${installedsoftwares.id})}" class="btn btn-danger ml-1 mr-1" role="button">Удалить</a></tr>
             </tr>
             </tbody>
         </table>
     </div>
-    <div class="text-center"><a href="/workplaces-create" class="btn btn-outline-primary ml-2 mr-2" role="button">Создать новый кабинет</a></div>
+    <div class="text-center"><a th:href="@{/room-details/saveSoft/{id}(id=${computerid})}" class="btn btn-outline-primary ml-2 mr-2" role="button">Добавить рабочее место</a></div>
 
 </div>
 </div>
