--- a/src/main/resources/templates/saveRequest.html
+++ b/src/main/resources/templates/saveRequest.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru" xmlns:th="http://thymeleaf.org"
       xmlns:sec="http://thymeleaf.org/extras/spring-security">
 <head>
@@ -7,17 +7,11 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>GuLog</title>
+    <title>Создать заявки</title>
 </head>
-
 <body>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
-    <a href="@{/Index}" class="control control_home">
-
-        <img src="Logo.png" alt="Home" width="100" height="40">
-    </a>
-
 
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 
@@ -42,49 +36,31 @@
 
 <div sec:authorize="hasAuthority('Admin')" class="container text-center">
 
-    <div class="text-center"><h2>Добавление кабинета</h2>
+    <div class="text-center"><h2>Заявка</h2>
 
-        <form th:action="@{/room-create}" th:object="${room}" method="post">
+        <form th:action="@{/room-details/computer-details/saveRequest/{id}(id=${installedsoftwaresid})}" th:object="${request}" method="post">
 
             <div class="m-3">
 
-
                 <div class="form-group row">
 
-                    <label class="col-form-label col-sm-4">Номер кабинета:</label>
+                    <label class="col-form-label col-sm-4">Описание проблемы:</label>
 
                     <div class="col-sm-8">
 
-                        <input type="text" th:field="*{roomNumber}" id="roomNumber"  placeholder="Введите номер кабинета" class="form-control"/>
+                        <input type="text" id="description_of_the_problem" th:field="*{description_of_the_problem}" class="form-control"/>
 
                     </div>
 
                 </div>
 
-              <!--  <div class="col-sm-8">
 
-                    <label class="col-form-label col-sm-4">Кто преподаёт:</label>
+                <button type="submit" class="btn btn-success">Создать</button>
 
-                    <select id ="user" th:field="*{user}" class="form-control" required>
-
-                        <th:block th:each="users : ${user}">
-
-                            <option th:text="${users.getFullName()}" th:value="${users.getId()}"></option>
-
-                        </th:block>
-
-                    </select>
-
-                </div>
-
-            </div> -->
-
-            <button type="submit" class="btn btn-success">Создать</button>
+            </div>
 
         </form>
-
     </div>
 </div>
-
 </body>
 </html>
