--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -14,15 +14,22 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
             <a href="@{/Index}" class="control control_home">
-			
-                <img src="Logo.png" alt="Home" width="100" height="40">                   		            
-            </a>  
-			
-		
+
+            </a>
+
+
 			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 
 			<li class="nav-item active">
 				<a  th:href="@{/Rooms}" class="btn btn-outline-primary ml-2 mr-2" role="button">Кабинеты<span class="sr-only"></span></a>
+			</li>
+
+			<li class="nav-item active">
+				<a  th:href="@{/Computers}" class="btn btn-outline-primary ml-2 mr-2" role="button">Список компьютеров<span class="sr-only"></span></a>
+			</li>
+
+			<li class="nav-item active">
+				<a  th:href="@{/software}" class="btn btn-outline-primary ml-2 mr-2" role="button">Список ПО<span class="sr-only"></span></a>
 			</li>
 
 			<li class="nav-item active">
@@ -34,11 +41,11 @@
 			</li>
 
 				<li class="nav-item active">
-					<a th:href="@{/Roles}" class="btn btn-outline-primary ml-2 mr-2" role="button">Роли<span class="sr-only"></span></button></a>
+					<a th:href="@{/Roles}" class="btn btn-outline-primary ml-2 mr-2" role="button">Список ролей<span class="sr-only"></span></button></a>
 				</li>
-        
+
 			</ul>
-		
+
 		<div>
 		<form sec:authorize="isAuthenticated()" class="form-inline" th:action="@{/logout}" method="post">
 			<button type="submit" class="btn btn-outline-primary mr-2" >Выйти</button>
