--- a/src/main/resources/templates/Roles.html
+++ b/src/main/resources/templates/Roles.html
@@ -22,7 +22,7 @@
         </li>
 
         <li class="nav-item active">
-            <a th:href="@{/Request}" class="btn btn-outline-primary ml-2 mr-2" role="button">Заявки<span class="sr-only"></span></a>
+            <a th:href="@{/RequestList}" class="btn btn-outline-primary ml-2 mr-2" role="button">Заявки<span class="sr-only"></span></a>
         </li>
 
         <li class="nav-item active">
