--- a/src/main/resources/templates/computerCreate.html
+++ b/src/main/resources/templates/computerCreate.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="ru" xmlns:th="http://thymeleaf.org"
-      xmlns:sec="http://thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-file=no">
+    <meta charset="UTF-8">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>Создать заявку</title>
+    <title>Создать компьютер</title>
 </head>
 <body>
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+    <a href="@{/Index}" class="control control_home">
+    </a>
+
 
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 
@@ -20,7 +21,7 @@
         </li>
 
         <li class="nav-item active">
-            <a th:href="@{/Request}" class="btn btn-outline-primary ml-2 mr-2" role="button">Заявки<span class="sr-only"></span></a>
+            <a th:href="@{/RequestList}" class="btn btn-outline-primary ml-2 mr-2" role="button">Заявки<span class="sr-only"></span></a>
         </li>
 
         <li class="nav-item active">
@@ -36,25 +37,37 @@
 
 <div sec:authorize="hasAuthority('Admin')" class="container text-center">
 
-    <div class="text-center"><h2>Создать заявку</h2>
+    <div class="text-center"><h2>Добавление кабинета</h2>
 
-        <form th:action="@{/room-details/computer-details/saveRequest/{id}(id=${installedsoftwaresid})}" th:object="${request}" method="post">
+        <div th:if = "${Error}" class="alert alert-danger">
+            <span th:text = "${Error}"></span>
+        </div>
+
+        <form th:action="@{/computerCreate}" th:object="${computer}" method="post">
 
             <div class="m-3">
 
+
                 <div class="form-group row">
 
-                        <textarea type="text" placeholder="Опишите проблему" id="description_of_the_problem" th:field="*{description_of_the_problem}" class="form-control" rows="5"></textarea>
+                    <label class="col-form-label col-sm-4">Инв. номер компьютера:</label>
+
+                    <div class="col-sm-8">
+
+                        <input type="text" th:field="*{INV}" id="INV"  placeholder="Введите инв. номер компьютера" class="form-control"/>
+
+                    </div>
 
                 </div>
 
-
-                <button type="submit" class="btn btn-success">Создать</button>
-
             </div>
 
+            <button type="submit" class="btn btn-success">Создать</button>
+
         </form>
+
     </div>
 </div>
+
 </body>
 </html>
