--- a/src/main/resources/templates/softwareCreate.html
+++ b/src/main/resources/templates/softwareCreate.html
@@ -1,21 +1,18 @@
-<!doctype html>
-<html lang="ru" xmlns:th="http://thymeleaf.org"
-      xmlns:sec="http://thymeleaf.org/extras/spring-security">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-file=no">
+    <meta charset="UTF-8">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>GuLog</title>
+    <title>Title</title>
 </head>
-
 <body>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
     <a href="@{/Index}" class="control control_home">
 
-        <img src="Logo.png" alt="Home" width="100" height="40">
     </a>
 
 
@@ -23,6 +20,10 @@
 
         <li class="nav-item active">
             <a  th:href="@{/Rooms}" class="btn btn-outline-primary ml-2 mr-2" role="button">Кабинеты<span class="sr-only"></span></a>
+        </li>
+
+        <li class="nav-item active">
+            <a  th:href="@{/Computers}" class="btn btn-outline-primary ml-2 mr-2" role="button">Кабинеты<span class="sr-only"></span></a>
         </li>
 
         <li class="nav-item active">
@@ -38,32 +39,40 @@
         </li>
 
     </ul>
+
+    <div>
+        <form sec:authorize="isAuthenticated()" class="form-inline" th:action="@{/logout}" method="post">
+            <button type="submit" class="btn btn-outline-primary mr-2" >Выйти</button>
+        </form>
+    </div>
+
 </nav>
 
 <div sec:authorize="hasAuthority('Admin')" class="container text-center">
 
-    <div class="text-center"><h2>Добавление кабинета</h2>
+    <div class="text-center"><h2>Добавление ПО</h2>
 
         <div th:if = "${Error}" class="alert alert-danger">
             <span th:text = "${Error}"></span>
         </div>
 
-        <form th:action="@{/room-create}" th:object="${room}" method="post">
+        <form th:action="@{/software/softwareCreate}" th:object="${software}" method="post">
 
             <div class="m-3">
 
 
                 <div class="form-group row">
 
-                    <label class="col-form-label col-sm-4">Номер кабинета:</label>
+                    <label class="col-form-label col-sm-4">Название:</label>
 
                     <div class="col-sm-8">
 
-                        <input type="text" th:field="*{roomNumber}" id="roomNumber"  placeholder="Введите номер кабинета" class="form-control"/>
+                        <input type="text" th:field="*{Name}" id="Name"  placeholder="Введите название программы" class="form-control"/>
 
                     </div>
 
                 </div>
+
             </div>
 
             <button type="submit" class="btn btn-success">Создать</button>
