--- a/src/main/resources/templates/user-update.html
+++ b/src/main/resources/templates/user-update.html
@@ -50,21 +50,7 @@
     <div class="m-3">
 
 
-            <div class="form-group row">
-
-                <label class="col-form-label col-sm-4">Логин:</label>
-
-                <div class="col-sm-8">
-
-                    <input readonly type="text" id="username" th:field="*{username}" class="form-control"/>
-
-                </div>
-
-            </div>
-
-
-
-
+        <input hidden type="text" id="username" th:field="*{username}" class="form-control"/>
 
 
             <div class="form-group row">
@@ -119,18 +105,9 @@
         </div>
 
 
+                <input hidden type="text" id="password" th:field="*{password}" class="form-control"/>
 
-            <div class="form-group row">
 
-            <label class="col-form-label col-sm-4">Пароль:</label>
-
-            <div class="col-sm-8">
-
-                <input readonly type="text" id="password" th:field="*{password}" class="form-control"/>
-
-            </div>
-
-            </div>
 
         <div class="form-group row">
 
